--- a/src/ddesktop/webroot/static/css/style.css
+++ b/src/ddesktop/webroot/static/css/style.css
@@ -59,15 +59,20 @@
 	margin-top: 30px;
 }
 
-#vnc-wrapper{
+#vnc-connection{
 	height: 768px;
-	width: 1024px;
 	background-color: #555;
-	margin-left: auto;
-	margin-right: auto;
 	padding: 0;
 	color: #fff;
 	font-size: 50px;
 	line-height: 768px;
+	text-align: center;
+}
+
+#vnc-wrapper{
+	width: 1024px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0;
 	text-align: center;
 }
