fix(container): set width to 1024px

--- a/src/ddesktop/webroot/static/css/style.css
+++ b/src/ddesktop/webroot/static/css/style.css
@@ -76,3 +76,16 @@
 	padding: 0;
 	text-align: center;
 }
+
+.container{
+	max-width: 1024px;
+	padding: 0px;
+}
+
+.container-fluid{
+	padding: 0;
+}
+
+.navbar-collapse {
+	padding: 0;
+}
